--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run build && node server.js",
     "build": "mkdir -p build && cp client/static/* build/ && webpack",
     "watch": "npm run build && run-p watch:*",
-    "watch:copy": "chokidar \"client/static/*\" \"client/pose1.png/*\" \"client/pose2.png/*\"   \"client/pose3.png/*\" \"client/pose4.png/*\" \"client/pose5.png/*\" \"client/pose6.png/*\" \"client/pose7.png/*\" \"client/pose8.png/*\" \"client/pose9.png/*\" \"client/pose10.png/*\" \"client/pose11.png/*\"  -c \"cp {path} build/\"",
+    "watch:copy": "chokidar \"client/static/*\" \"client/introicon.png/*\" \"client/pose1.png/*\" \"client/pose2.png/*\"   \"client/pose3.png/*\" \"client/pose4.png/*\" \"client/pose5.png/*\" \"client/pose6.png/*\" \"client/pose7.png/*\" \"client/pose8.png/*\" \"client/pose9.png/*\" \"client/pose10.png/*\" \"client/pose11.png/*\"  -c \"cp {path} build/\"",
     "watch:js": "webpack --watch",
     "watch:server": "nodemon -w server.js server.js -x \"npm run\"",
     "server.js": "npm start",
